<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>io.kokuwa.maven</groupId>
		<artifactId>maven-parent</artifactId>
		<version>0.6.17</version>
		<relativePath />
	</parent>

	<artifactId>k3s-maven-plugin</artifactId>
	<version>2.0.0-SNAPSHOT</version>
	<packaging>maven-plugin</packaging>

	<name>k3s Maven Plugin</name>
	<description>Maven Plugin to start k3s for test purposes</description>
	<url>https://github.com/kokuwaio/k3s-maven-plugin</url>
	<inceptionYear>2022</inceptionYear>
	<organization>
		<name>Kokuwa.io</name>
		<url>http://kokuwa.io</url>
	</organization>
	<licenses>
		<license>
			<name>Apache-2.0</name>
			<url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<developers>
		<developer>
			<id>sschnabe</id>
			<name>Stephan Schnabel</name>
			<url>https://github.com/sschnabe</url>
			<email>stephan@grayc.de</email>
			<organization>GrayC GmbH</organization>
			<organizationUrl>https://grayc.de</organizationUrl>
			<timezone>Europe/Berlin</timezone>
			<roles>
				<role>Lead Developer</role>
			</roles>
		</developer>
	</developers>

	<prerequisites>
		<maven>${version.org.apache.maven.plugin}</maven>
	</prerequisites>

	<scm>
		<url>https://github.com/kokuwaio/k3s-maven-plugin</url>
		<connection>scm:git:https://github.com/kokuwaio/k3s-maven-plugin.git</connection>
		<developerConnection>scm:git:https://github.com/kokuwaio/k3s-maven-plugin.git</developerConnection>
		<tag>HEAD</tag>
	</scm>
	<issueManagement>
		<system>github</system>
		<url>https://github.com/kokuwaio/k3s-maven-plugin/issues</url>
	</issueManagement>
	<ciManagement>
		<system>github</system>
		<url>https://github.com/kokuwaio/k3s-maven-plugin/actions</url>
	</ciManagement>

	<properties>

		<!-- ===================================================================== -->
		<!-- ============================== Build ================================ -->
		<!-- ===================================================================== -->

		<maven.compiler.source>17</maven.compiler.source>
		<maven.compiler.target>17</maven.compiler.target>

		<!-- ===================================================================== -->
		<!-- ============================= Versions ============================== -->
		<!-- ===================================================================== -->

		<version.org.junit.jupiter>5.11.0</version.org.junit.jupiter>
		<version.org.slf4j>1.7.36</version.org.slf4j>
		<version.com.fasterxml.jackson>2.17.2</version.com.fasterxml.jackson>

	</properties>

	<dependencies>

		<!-- maven -->
		<dependency>
			<groupId>org.apache.maven</groupId>
			<artifactId>maven-plugin-api</artifactId>
			<scope>provided</scope>
		</dependency>
		<dependency>
			<groupId>org.apache.maven.plugin-tools</groupId>
			<artifactId>maven-plugin-annotations</artifactId>
			<scope>provided</scope>
		</dependency>

		<!-- libraries -->
		<dependency>
			<groupId>com.fasterxml.jackson.core</groupId>
			<artifactId>jackson-databind</artifactId>
			<version>${version.com.fasterxml.jackson}</version>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${version.org.slf4j}</version>
			<scope>provided</scope>
		</dependency>

		<!-- test -->
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>${version.org.junit.jupiter}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-simple</artifactId>
			<version>${version.org.slf4j}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.eclipse.sisu</groupId>
			<artifactId>org.eclipse.sisu.plexus</artifactId>
			<scope>test</scope>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<!-- add help -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-plugin-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>helpmojo</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<!-- run invoker tests -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-invoker-plugin</artifactId>
				<executions>
					<execution>
						<goals>
							<goal>install</goal>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
						<configuration>
							<goals>
								<goal>verify</goal>
							</goals>
						</configuration>
					</execution>
				</executions>
			</plugin>

		</plugins>
	</build>
</project>
